kubernetes_manifest_files/API Gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: default
spec:
  parentRefs:
    - name: prod-gateway                               # Reference the parent Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app                                # Match URL path prefix
      backendRefs:
        - name: app-service                            # Destination Service name
          port: 80                                     # Destination Service port
